[package]
name = "libjasper-sys"
version = "0.1.0"
edition = "2021"
build = "build/main.rs"

[features]
default = ["build_cc", "all"]
build = []
build_native = ["build"]
build_cc = ["build", "base"]
all = ["build_cc", "base", "bmp", "jp2", "jpc", "jpg", "mif", "pgx", "ras"]
base = []
bmp = []
jp2 = []
jpc = []
jpg = ["dep:mozjpeg-sys"]
heic = []
mif = []
pgx = []
ras = []

[build-dependencies]
cc = { version = "1.0.77", features = ["parallel"] }
bindgen = { version = "0.63.0" }
thiserror = "1.0.37"

[dependencies]
cc = { version = "1.0.77", features = ["parallel"] }
mozjpeg-sys = { version = "1.0.3", features = ["jpeg80_abi"], optional = true }
